# AQTBot

./: .gitignore  AQTBot_Design_Doc.xmind  LICENSE  README.md  pyproject.toml  requirements.txt  start.bat
AQT/: AQTBot_Design_Doc.xmind  I18N_auto.bat  aqt_bot.py  aqt_db.py  aqt_keyboards.py  bot.py  code_generator.py  keyboards.py  main.py  messages.py  msgs.py
AQT/database/: aqt_db.py  postgre_db.py
AQT/env/: env_reader.py  venv.env
AQT/handlers/: commands.py  questionthread.py
AQT/keyboards/: keyboards.py
AQT/locales/: messages.pot
AQT/locales/ru/LC_MESSAGES/: messages.mo  messages.po
AQT/other/: code_checker.py  code_generator.py  messages.json  messages.py
